--- a/trunk/MagicCarpet/MagicCarpet/MagicCarpet.csproj
+++ b/trunk/MagicCarpet/MagicCarpet/MagicCarpet.csproj
@@ -113,7 +113,6 @@
     <Compile Include="com\xexuxjy\magiccarpet\actions\ActionFindManaball.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\actions\ActionIdle.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\actions\ActionLoad.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\actions\ActionNone.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\actions\ActionPool.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\actions\ActionTravel.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\actions\ActionUnload.cs" />
@@ -169,11 +168,11 @@
     <Content Include="GameThumbnail.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\bullet-xna\trunk\BulletXNADemos\BulletXNADemos-Windows.csproj">
+    <ProjectReference Include="..\..\..\..\bullet-xna\trunk\BulletXNADemos\BulletXNADemos-Windows.csproj">
       <Project>{3E64761A-AC83-4C76-93BE-475F95165560}</Project>
       <Name>BulletXNADemos-Windows</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\bullet-xna\trunk\BulletXNA\BulletXNA-Windows.csproj">
+    <ProjectReference Include="..\..\..\..\bullet-xna\trunk\BulletXNA\BulletXNA-Windows.csproj">
       <Project>{4E1937EE-3139-44CB-989D-F050BC099CE6}</Project>
       <Name>BulletXNA-Windows</Name>
     </ProjectReference>
