--- a/trunk/MagicCarpet/MagicCarpet/MagicCarpet.csproj
+++ b/trunk/MagicCarpet/MagicCarpet/MagicCarpet.csproj
@@ -122,7 +122,7 @@
     <Compile Include="com\xexuxjy\magiccarpet\actions\ActionFlee.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\actions\ActionIdle.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\actions\ActionLoad.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\actions\ActionPool.cs" />
+    <Compile Include="com\xexuxjy\magiccarpet\actions\ActionComponent.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\actions\ActionTravel.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\actions\ActionUnload.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\actions\BaseAction.cs" />
@@ -149,6 +149,7 @@
     <Compile Include="com\xexuxjy\magiccarpet\GameStateManagement\Screens\PauseMenuScreen.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\GameStateManagement\Screens\PlayerIndexEventArgs.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\interfaces\IKeyboardCallback.cs" />
+    <Compile Include="com\xexuxjy\magiccarpet\manager\ActionPool.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\manager\GameObjectManager.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\gameobjects\GameObjectType.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\gameobjects\Magician.cs" />
@@ -159,6 +160,7 @@
     <Compile Include="com\xexuxjy\magiccarpet\interfaces\ICollideable.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\MagicCarpet.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\manager\MCContentManager.cs" />
+    <Compile Include="com\xexuxjy\magiccarpet\manager\SpellPool.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\Program.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\renderer\DefaultRenderer.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\renderer\TerrainSectionRenderer.cs" />
@@ -168,7 +170,7 @@
     <Compile Include="com\xexuxjy\magiccarpet\spells\SpellHeal.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\spells\MovingSpell.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\spells\SpellCastle.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\spells\SpellPool.cs" />
+    <Compile Include="com\xexuxjy\magiccarpet\spells\SpellComponent.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\spells\SpellRubberband.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\spells\SpellSwarmOfBees.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\spells\SpellTurbo.cs" />
@@ -192,6 +194,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="config\settings.txt" />
     <Content Include="Game.ico" />
     <Content Include="GameThumbnail.png" />
   </ItemGroup>
@@ -242,7 +245,6 @@
     <None Include="Scripts\LEVEL2.mc" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="config\" />
     <Folder Include="logs\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
